--- a/tsconfig.vite.json
+++ b/tsconfig.vite.json
@@ -17,5 +17,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.config.ts"
+  ]
 }
