--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,6 +4,9 @@
     "useDefineForClassFields": true,
     "module": "es6",
     "skipLibCheck": true,
+    "lib": [
+      "es6", "dom", "dom.iterable"
+    ],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
