--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   },
   "homepage": "https://github.com/da-ns/jung-test#readme",
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
+    "html-react-parser": "^5.1.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
