--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
